data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_781.wast
;; 2. **Unreachable Code within a Loop**:    - Construct a test with a `loop` instruction containing unreachable code following a `br` (branch) instruction. Check if both implementations correctly identify and handle the unreachable code, maintaining a consistent CFG.

(assert_invalid
  (module (func $unreachable_code_within_loop
    (loop 
      (br 0)
      (i32.const 1) ;; Unreachable code
      (i32.add)    ;; Unreachable code
    )
  ))
  "type mismatch"
)